implementations/rust/ockam/ockam/tests/node_test/fail_with_borrowed_context.stderr
error: The context argument must be mutable
 --> $DIR/fail_with_borrowed_context.rs:2:7
  |
2 | async fn my_test(ctx: &Context) -> ockam_core::Result<()> {
  |       ^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> $DIR/fail_with_borrowed_context.rs:1:1
  |
1 | / #[ockam::test]
2 | | async fn my_test(ctx: &Context) -> ockam_core::Result<()> {
3 | |     ctx.address();
4 | | }
  | |_^ consider adding a `main` function to `$DIR/tests/node_test/fail_with_borrowed_context.rs`
