implementations/rust/ockam/ockam/tests/node_test/fail_with_borrowed_context.rs
#[ockam::test]
async fn my_test(ctx: &Context) -> ockam_core::Result<()> {
    ctx.address();
}
